<resources>
    <string name="app_name">Dotify</string>
    <string name="username">first_avenger</string>
    <string name="change_user">CHANGE USER</string>
    <string name="song_title">Strangers</string>
    <string name="song_artist">Seven Lions featuring Tove Lo, Myon, Shaman Man, Kyoyeki Tenkai</string>
    <string name="number_of_plays"># plays</string>
    <string name="imgCover_description">This is an image of the album cover Strangers</string>
    <string name="imgNext_description">This is an image of the next track button</string>
    <string name="imgPlay_description">This is an image of the play button</string>
    <string name="imgPrevious_description">This is an image of the previous track button</string>
    <string name="etUsername_hint">Enter username here</string>
    <string name="title_all_songs">All Songs</string>
    <string name="song_item_title">Song Title</string>
    <string name="song_item_artist">Song Artist</string>
    <string name="btn_shuffle">SHUFFLE</string>
    <string name="player_texts">%s - %s</string>
    <string name="btnSettings">SETTINGS</string>
    <string name="tvPlayCount">Play count: %d</string>
    <string name="btnProfile">Profile</string>
    <string name="btnStatistics">PROFILE STATISTICS</string>
    <string name="btnAbout">ABOUT</string>
    <string name="imgSaitama">profile picture of Saitama</string>
    <string name="tvUsername"><b>Saitama</b></string>
    <string name="tvVersionNumber">Version: %s</string>
    <string name="new_song">New Song</string>
    <string name="new_song_channel_description">This is a channel that notifies when you have a new song</string>
    <string name="notification_title">New Music from %s</string>
    <string name="notification_content">Listen now to %s</string>
</resources>