<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imgCover_description"
        android:src="@drawable/strangers_cover_art"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCover" />

    <TextView
        android:id="@+id/tvArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/song_artist"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvPlays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/number_of_plays"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvArtist" />

    <ImageView
        android:id="@+id/imgPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgPrevious_description"
        android:onClick="previousClicked"
        android:src="@drawable/ic_previous"
        app:layout_constraintEnd_toStartOf="@+id/imgPlay"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPlays" />

    <ImageView
        android:id="@+id/imgPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imgPlay_description"
        android:onClick="incrementPlays"
        android:src="@drawable/ic_play"
        app:layout_constraintEnd_toStartOf="@+id/imgNext"
        app:layout_constraintStart_toEndOf="@+id/imgPrevious"
        app:layout_constraintTop_toBottomOf="@+id/tvPlays" />

    <ImageView
        android:id="@+id/imgNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/imgNext_description"
        android:onClick="nextClicked"
        android:src="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgPlay"
        app:layout_constraintTop_toBottomOf="@+id/tvPlays" />

</androidx.constraintlayout.widget.ConstraintLayout>