<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:padding="16dp">

    <Button
        android:id="@+id/btnProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnStatistics"/>

    <Button
        android:id="@+id/btnStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStatistics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnProfile"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"/>

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAbout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStatistics"/>
</androidx.constraintlayout.widget.ConstraintLayout>